# UI-Testing

./: .gitignore  main.py  pyproject.toml
src/: auth_url.py  config.py  login.py
tests/: test_ui.py
